# aplab-py

./: README.md  pyproject.toml
aplab/: app.py  index.html  style.css
aplab/components/: code_editor.py  visualizations.py
aplab/topics/t00_fundamentals/: t01_programming_basics.py
aplab/topics/t01_basics/: t02_data_types.py  t03_operations.py
aplab_py/: app.py  index.html  requirements.txt  style.css
aplab_py/components/: code_editor.py  visualizations.py
aplab_py/config/: styles.py
aplab_py/scripts/: main.js  translations.js
aplab_py/topics/t00_fundamentals/: t01_programming_basics.py
aplab_py/topics/t01_basics/: t01_variables.py
